# switchback

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_DESIGN_RECAP.md  Dockerfile  LICENSE  MULTIMODAL_WORKLOAD_BRIEF.md  NATIVE_RELAY.md  NATIVE_RELAY_SPEC.md  OPERATIONS.md  PROVIDER_SETUP.md  QUICKSTART.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  project.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Plans/: execution-control-roadmap.md
cli/: README.md  install.sh  sb
cli/examples/: opencode.json  pi-models.json  relay.example.yaml  sb.env.example
cli/tests/: sb_capture_toggle.zsh  sb_claude_profiles.zsh  sb_codex_shared_sessions.zsh  (+11 more)
config/: demo.yaml  local.example.yaml  model-registry.json  native-clients.yaml  opencode.example.json  provider-registry.json  quickstart.yaml  switchback.example.yaml
crates/sb-adapter/: Cargo.toml
crates/sb-adapter/src/: lib.rs
crates/sb-adapters/: Cargo.toml
crates/sb-adapters/src/: anthropic.rs  bedrock.rs  codec.rs  composed.rs  egress.rs  event_stream.rs  gemini.rs  latency.rs  lib.rs  mock.rs  openai_compatible.rs  registry.rs  signer.rs  sigv4.rs  transport.rs
crates/sb-bodylog/: Cargo.toml
crates/sb-bodylog/src/: lib.rs
crates/sb-bodylog/tests/: bodylog.rs
crates/sb-compress/: Cargo.toml
crates/sb-compress/src/: lib.rs
crates/sb-core/: Cargo.toml
crates/sb-core/src/: catalog.rs  config.rs  credential.rs  error.rs  execution.rs  ir.rs  lib.rs  routing.rs  target.rs  workload.rs
crates/sb-credentials/: Cargo.toml
crates/sb-credentials/src/: account.rs  availability.rs  breaker.rs  lib.rs  refresh.rs  resolver.rs  service_account.rs  vault.rs
crates/sb-credentials/src/provider_accounts/: mod.rs  normalize.rs  reconcile.rs  store.rs  types.rs
crates/sb-credentials/src/provider_accounts/import/: claude_auth.rs  codex_auth.rs  codex_multi_auth.rs  codexbar.rs  codexbar_config.rs  mod.rs
crates/sb-credentials/src/testdata/: test_rsa_pkcs8.pem
crates/sb-credentials/tests/: provider_accounts.rs
crates/sb-credentials/tests/fixtures/provider-accounts/claude-auth/: active.json
crates/sb-credentials/tests/fixtures/provider-accounts/codex-auth/: active.json
crates/sb-credentials/tests/fixtures/provider-accounts/codex-multi-auth/: accounts.json  quota-cache.json
crates/sb-credentials/tests/fixtures/provider-accounts/codexbar/: usage-history.jsonl
crates/sb-credentials/tests/fixtures/provider-accounts/codexbar-config/: config.json
crates/sb-credentials/tests/fixtures/provider-accounts/conflicts/: colliding-account-key.jsonl  same-email-different-uuid.json  shared-org-different-uuid.json
crates/sb-credentials/tests/fixtures/provider-accounts/malformed/: oversized-line.jsonl  path-traversal-label.json  wrong-types.json
crates/sb-credentials/tests/fixtures/provider-accounts/switchback-auth-registry/: default.json  runs.tsv  work.json
crates/sb-eval/: Cargo.toml
crates/sb-eval/src/: lib.rs
crates/sb-eval/tests/: eval.rs
crates/sb-eval/tests/fixtures/: codex_cli_sanitized.json
crates/sb-ledger/: Cargo.toml
crates/sb-ledger/src/: lib.rs
crates/sb-net/: Cargo.toml
crates/sb-net/src/: lib.rs
crates/sb-plugin/: Cargo.toml
crates/sb-plugin/src/: lib.rs  wasm.rs
crates/sb-protocols/: Cargo.toml
crates/sb-protocols/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  responses.rs  schema.rs
crates/sb-protocols/tests/: native_relay_fixtures.rs
crates/sb-protocols/tests/fixtures/native-relay/: manifest.json
crates/sb-protocols/tests/fixtures/native-relay/claude-code/: non_stream_request_response.json
crates/sb-protocols/tests/fixtures/native-relay/codex/: non_stream_request_response.json  tool_call_and_tool_result.json
crates/sb-runtime/: Cargo.toml
crates/sb-runtime/src/: audit.rs  collect.rs  denial.rs  embeddings.rs  execute.rs  execution_meta.rs  finish_attempt.rs  hedge.rs  helpers.rs  lib.rs  outcome.rs  profiles.rs  scorecard_runtime.rs  snapshot.rs  stream.rs  tests.rs  trace_persist.rs  usage.rs
crates/sb-runtime/src/quality_eval/: capture.rs  mod.rs  rubric.rs  worker.rs
crates/sb-runtime/src/scorecard/: class.rs  config.rs  entry.rs  mod.rs
crates/sb-server/: Cargo.toml
crates/sb-server/src/: activator.rs  admission.rs  app.rs  auth.rs  body_audit.rs  cli.rs  config_cli.rs  controlplane.rs  cp.rs  dashboard.html  doctor_cli.rs  eval_cli.rs  fal_probe.rs  forward_proxy.rs  http_response.rs  idempotency.rs  lane_cli.rs  lane_profile_cli.rs  lease.rs  lib.rs  local_probe.rs  main.rs  mcp_cli.rs  native_cli.rs  native_history_cli.rs  otel.rs  provider_cli.rs  provider_preset.rs  schema_cli.rs  serve.rs  setup_cli.rs  sse.rs  state.rs  tap.rs  tenancy.rs  tests.rs  vault_cli.rs  workloads.rs
crates/sb-server/src/handlers/: admin.rs  anthropic.rs  common.rs  embeddings.rs  meta.rs  mod.rs  openai.rs  workloads.rs
crates/sb-server/src/provider_cli/: add.rs  doctor.rs  env.rs  mod.rs  provider.rs  types.rs
crates/sb-server/tests/: admin_accounts.rs  admin_lanes.rs  admission.rs  anthropic.rs  auth.rs  auth_scheme.rs  bedrock.rs  cli.rs  client_profiles.rs  combos.rs  cost_routing.rs  cp.rs  dashboard.rs  egress.rs  egress_auth.rs  embeddings.rs  gemini.rs  health.rs  idempotency.rs  latency_routing.rs  multi_account.rs  native_relay.rs  oauth_refresh.rs  outcome_scorecard.rs  passthrough.rs  plugins.rs  pricing.rs  quality_eval.rs  reload.rs  resilience.rs  routing_auto.rs  session_affinity.rs  smoke.rs  state_store.rs  tenancy.rs  traces.rs  usage.rs  usage_durable.rs  vertex.rs  workloads.rs
crates/sb-store/: Cargo.toml
crates/sb-store/src/: lib.rs
crates/sb-trace/: Cargo.toml
crates/sb-trace/src/: lib.rs
tools/: README.md  build-direct-registry.ts  build-registry.ts  cdp-extract.ts  enrich-provider-registry.ts  probe-provider-registry.ts  refresh-provider-registry.ts  score-provider-registry.ts
(+39 files in other folders)
