[workspace]
resolver = "2"
members = [
    "crates/sb-core",
    "crates/sb-adapter",
    "crates/sb-protocols",
    "crates/sb-router",
    "crates/sb-credentials",
    "crates/sb-compress",
    "crates/sb-ledger",
    "crates/sb-trace",
    "crates/sb-bodylog",
    "crates/sb-eval",
    "crates/sb-adapters",
    "crates/sb-net",
    "crates/sb-store",
    "crates/sb-plugin",
    "crates/sb-runtime",
    "crates/sb-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
authors = ["Umut Keltek"]
repository = "https://github.com/umutkeltek/switchback"
homepage = "https://github.com/umutkeltek/switchback"
readme = "README.md"
keywords = ["ai", "llm", "gateway", "openai", "proxy"]
categories = ["web-programming::http-server", "api-bindings"]
rust-version = "1.80"

[workspace.dependencies]
# internal
sb-core = { path = "crates/sb-core" }
sb-adapter = { path = "crates/sb-adapter" }
sb-protocols = { path = "crates/sb-protocols" }
sb-router = { path = "crates/sb-router" }
sb-credentials = { path = "crates/sb-credentials" }
sb-compress = { path = "crates/sb-compress" }
sb-ledger = { path = "crates/sb-ledger" }
sb-trace = { path = "crates/sb-trace" }
sb-bodylog = { path = "crates/sb-bodylog" }
sb-eval = { path = "crates/sb-eval" }
sb-adapters = { path = "crates/sb-adapters" }
sb-net = { path = "crates/sb-net" }
sb-store = { path = "crates/sb-store" }
sb-plugin = { path = "crates/sb-plugin" }
sb-runtime = { path = "crates/sb-runtime" }

# async / http
tokio = { version = "1.43", features = ["full"] }
arc-swap = "1"

# persistence (control-plane state store: revisions + audit)
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "socks"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-trait = "0.1"

# serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.5"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }

# credential vault (age-encrypted file + OS-keychain key)
age = "0.11"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# crypto (AWS SigV4 request signing) + Bedrock helpers
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
time = "0.3"
crc32fast = "1"
zstd = "0.13"

# observability / errors / cli
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
