[package]
name = "sb-adapter"
description = "The ProviderAdapter trait + adapter error model for Switchback"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sb-core.workspace = true
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
