[package]
name = "sb-adapters"
description = "Concrete provider adapters: mock + openai_compatible"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sb-core.workspace = true
sb-adapter.workspace = true
sb-protocols.workspace = true
reqwest.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hmac.workspace = true

[dev-dependencies]
tokio = { workspace = true }
