[package]
name = "sb-credentials"
description = "Multi-account, multi-method auth: account store, availability locks, selection, credential leases"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sb-core.workspace = true
sb-net.workspace = true
serde_json.workspace = true
age.workspace = true
keyring.workspace = true
# OAuth token refresh (token-endpoint HTTP + per-account async dedup).
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
# GCP service-account JWT signing (RS256) for the Vertex JWT-bearer grant.
jsonwebtoken = "9"

[dev-dependencies]
tokio = { workspace = true }
