[package]
name = "sb-ledger"
description = "Append-only usage/cost ledger — request accounting, cost attribution, the marketplace billing seam"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sb-core.workspace = true
sb-store.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
