[package]
name = "sb-server"
description = "Switchback HTTP server + CLI (the `switchback` binary)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Opt-in OpenTelemetry OTLP span export. Off by default — heavy, version-
# sensitive deps stay out of the default build; the spans render locally either way.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# Opt-in tier-2 sandboxed Wasm plugins (pulls Wasmtime via the runtime). Off by
# default — heavyweight dep; tier-1 trait-object built-ins need no feature.
wasm = ["sb-runtime/wasm"]

[lib]
name = "sb_server"
path = "src/lib.rs"

[[bin]]
name = "switchback"
path = "src/main.rs"

[dependencies]
sb-core.workspace = true
sb-adapter.workspace = true
sb-protocols.workspace = true
sb-router.workspace = true
sb-credentials.workspace = true
sb-compress.workspace = true
sb-ledger.workspace = true
sb-trace.workspace = true
sb-adapters.workspace = true
sb-runtime.workspace = true
sb-store.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
# Transparent tap (Mode B): verbatim forward of client requests to upstreams.
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
sha2.workspace = true
rusqlite.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
# OpenTelemetry (optional; enabled by the `otel` feature). Coherent 0.32/0.33 set.
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true, features = ["trace"] }
opentelemetry-otlp = { version = "0.32", optional = true, default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = { version = "0.33", optional = true }

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
base64.workspace = true
crc32fast.workspace = true
