[package]
name = "sb-store"
description = "Switchback durable control-plane state store: config revisions + audit log (SQLite)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "sb_store"
path = "src/lib.rs"

[features]
default = []
eval = ["dep:sb-eval", "dep:sha2"]

[dependencies]
sb-eval = { workspace = true, optional = true }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
sb-core.workspace = true
